rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q736.1_1995_ITCCOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q736.1_1995_ITCCOperations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod itccoperations {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum CallDispositionCode {
        automatedCallToCardIssuer = 1,
        operatorStationCallToCardIssuer = 2,
        operatorPersonCallToCardIssuer = 3,
        automatedCallToThirdCountry = 4,
        operatorStationCallToThirdCountry = 5,
        operatorPersonCallToThirdCountry = 6,
        automatedCallWithinCardAcceptorsCountry = 7,
        operatorStationCallWithinCardAcceptorsCountry = 8,
        operatorPersonCallWithinCardAcceptorsCountry = 9,
        unrateable = 10,
        unsuccessful = 11,
        freeCall = 12,
        fixedCharges = 13,
        adhoc = 14,
    }
    #[doc = " Coded as Y1Y2M1M2D1D2H1H2M1M2S1S2, with each digit coded BCD. The first octet"]
    #[doc = " contains 2 digits representing the year (Y1Y2) and the remaining items are sequenced"]
    #[doc = " following. Digit of more significant (e.g. Y1) in each item is put in the BCD field of less"]
    #[doc = " significant in the corresponding octet."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct CallDuration(pub FixedOctetString<3usize>);
    #[doc = " Formats as indicated in 1.4.2.3.2"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=9"))]
    pub struct CalledPartyNumber(pub OctetString);
    #[doc = " Formats as for Q.763 Called party number"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=9"))]
    pub struct CallingPartyNumber(pub OctetString);
    #[doc = " Formats as for Q.763 Calling party number"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=5"))]
    pub struct CardAcceptorIdentifier(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct DateAndTime(pub FixedOctetString<6usize>);
    #[doc = " Coded as HHMMSS with each digit coded BCD. The first octet contains"]
    #[doc = " HH and the remaining items are sequenced following. Digit of more significant in"]
    #[doc = " each item is put in the BCD field of less significant in the corresponding octet."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("3..=5"))]
    pub struct EstimatedCallCharge(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum InputErrorCause {
        errorInMessageFormat = 1,
        unexpectedInputData = 2,
        missingParameter = 3,
        unexpectedParameter = 4,
    }
    #[doc = " Formats as indicated in 1.4.2.3.1"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=4"))]
    pub struct PersonalIdentificationNumber(pub OctetString);
    #[doc = " Contents and data type definitions"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=11"))]
    pub struct PrimaryAccountNumber(pub OctetString);
    #[doc = " Formats as indicated in 1.4.2.3.3"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ResponseCode {
        serviceApproved = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ServiceDeniedCause {
        creditThresholdExceeded = 1,
        dueToNonPayment = 2,
        invalidCardNumber = 3,
        invalidCardNumberPINCombination = 4,
        incorrectPIN = 5,
        allowablePINTriesExceeded = 6,
        expiredCard = 7,
        restrictedCardNumber = 8,
        callNotPermittedFromStation = 9,
        validationDatabaseUnavailable = 10,
        validationOnWrongCardIssuerMisroutedQuery = 11,
        volumeThresholdExceeded = 12,
        fraudRestriction = 13,
    }
    #[doc = " Formats as indicated in 1.4.2.3.4."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum UpdateResult {
        updateComplete = 1,
    }
    #[doc = " Invocation timer value is recommended to be 5 seconds"]
    #[doc = " Object identifier path"]
    pub static ITCC_OID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&[0u32, 0u32], &***Q, &[736u32, 1u32]].concat())
            .unwrap()
            .to_owned()
    });
}
