rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q736.3_1995_Q736-Reverse-Charging.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q736.3_1995_Q736-Reverse-Charging.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod q736_reverse_charging {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "  constants and data type definitions"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("2..=10"))]
    pub struct UserNumber(pub OctetString);
    #[doc = "  Formats as for Q.763 calling party number"]
    #[doc = "  object identifier path"]
    pub static REV_OID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&[0u32, 0u32], &***Q, &[736u32, 3u32]].concat())
            .unwrap()
            .to_owned()
    });
}
