rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q755.2_1997_TC-Testing-User.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q755.2_1997_TC-Testing-User.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod tc_testing_user {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use super::tc_tmp::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " application-context-names"]
    pub static AC_ID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&[0u32, 0u32], &***Q, &[755u32, 5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static TESTING_AC_ID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***AC_ID, &[1u32, 1u32]].concat())
            .unwrap()
            .to_owned()
    });
}
