rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q765.4_2000_COGAT-Protocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q765.4_2000_COGAT-Protocol.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype GATPDU of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype GATPDU of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype GATPDU of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype GATPDU of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod cogat_protocol {
    extern crate alloc;
    use super::gat_pdu::*;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "TYPE DEFINITIONS FOR DATA"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct CalledPartyNumber(pub FixedOctetString<1usize>);
    #[doc = "The CalledPartyNumber is coded as described in Recommendation Q.763 [3]."]
    #[doc = "The ISUP parameter name and length octets are not included."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=30"))]
    pub struct Cause(pub OctetString);
    #[doc = " Network specific"]
    #[doc = "DEFINITION OF OBJECT IDENTIFIER PATH"]
    pub static C_OGATOID: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[0u32, 0u32, 17u32, 765u32, 4u32, 2u32, 1u32]).to_owned());
    #[doc = "The Cause is coded as described in Recommendation Q.850 [18]."]
    #[doc = "The information element identifier and length octets are not included."]
    #[doc = "DEFINITION OF RANGE CONSTANTS"]
    pub static MAX_CAUSE_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(30i128));
    pub static MAX_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(2048i128));
    pub static MAXCD_PLENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(1i128));
}
