rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q773_1997_DialoguePDUs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q773_1997_DialoguePDUs.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 8, column 47]
   │
   │ 
 8 │  -- Module DialoguePDUs (Q.773:06/1997)-- See also ITU-T Q.773 (06/1997)-- See also the index of all ASN.1 assignments needed in this Recommendation ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
