rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q775_1997_TC-Notation-Extensions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q775_1997_TC-Notation-Extensions.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 26, column 2]
    │
    │ 
 26 │  APPLICATION-CONTEXT ::= CLASS { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 27 │    &associationContract           CONTRACT,
 28 │    &dialogueMode                  DialogueMode,
 29 │    &termination                   Termination OPTIONAL,
 30 │    &componentGrouping             BOOLEAN DEFAULT TRUE,
 31 │    &dialogueAndComponentGrouping  BOOLEAN DEFAULT TRUE,
 32 │    &AdditionalASEs                OBJECT IDENTIFIER OPTIONAL,
 33 │    &AbstractSyntaxes              ABSTRACT-SYNTAX,
 34 │    &applicationContextName        OBJECT IDENTIFIER UNIQUE
 35 │  }
    │
────╯
